...
        android:gravity="center"
        android:maxLines="3"
        android:textColor="#000000"
        android:textSize="@dimen/text_medium" />

    <LinearLayout
        android:id="@+id/topRatingContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="0dp"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/ratingContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/ratingView0"
                style="@style/NPSCircle"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:gravity="center_vertical|center_horizontal"
                android:tag="0"
                android:text="0" />
...
                android:layout_marginRight="2dp"
                android:gravity="center_vertical|center_horizontal"
                android:tag="1"
                android:text="1" />

            <TextView
                android:id="@+id/ratingView2"
                style="@style/NPSCircle"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:gravity="center_vertical|center_horizontal"
                android:tag="2"
                android:text="2" />
...
        android:fadingEdgeLength="15dp"
        android:fillViewport="false"
        android:overScrollMode="never"
        android:requiresFadingEdge="vertical"
        android:scrollbars="none">
        <RelativeLayout
            android:id="@+id/reasonFooter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone">

            <TextView
...
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="@dimen/text_medium" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/txtReason"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_below="@+id/txtFeedbackQstn"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
...
                android:lines="3"
                android:maxLines="3"
                android:minLines="3"
                android:textSize="@dimen/text_medium" />

            <LinearLayout
                android:id="@+id/emailFollowUpContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtReason"
                android:orientation="vertical"
                android:visibility="gone"
                android:animateLayoutChanges="true">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/chkEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textSize="@dimen/text_medium"
                    />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_height="30dp"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center"
...
            android:fillViewport="false"
            android:overScrollMode="never"
            android:requiresFadingEdge="vertical"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/optionsContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

            </LinearLayout>
...
