...
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="center"
    tools:context="com.loyagram.campaignsdkdemo.MainActivity">

    <LinearLayout
        android:id="@+id/mainContianer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/lg_surveybutton"
        android:orientation="vertical"
...
                    android:text="CES" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttoncontainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

...
                android:layout_marginBottom="10dp"
                android:background="@drawable/lg_surveybutton"
                android:text="Show as Dialog"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/fromXml"
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/lg_surveybutton"
                android:text="Show From xml"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/btnFromBottom"
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/lg_surveybutton"
                android:text="Slide From Bottom"
                android:textColor="@color/colorAccent" />
            <Button
                android:id="@+id/btnPreview"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/lg_surveybutton"
                android:text="Preview"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
...
