<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="visible">
    <Button
        android:id="@+id/btnExit"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:background="@drawable/lg_surveybutton"
        android:text="Exit Campaign"
        android:layout_gravity="center"
        android:textColor="@color/colorAccent"/>
    </LinearLayout>
    <com.loyagram.android.campaignsdk.ui.LoyagramCampaignView
        android:id="@+id/loaygramCampaignView"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:layout_gravity="center"
        app:campaignColor="#1abc9c"
        app:campaignId="1020-49bd1a50-1c51-445d-8043-fa8f907a0078">
    </com.loyagram.android.campaignsdk.ui.LoyagramCampaignView>
</FrameLayout>